Fix: dropdown arrow 커서 적용 및 selectList z-index 수정

--- a/src/components/common/Dropdown.module.scss
+++ b/src/components/common/Dropdown.module.scss
@@ -48,6 +48,7 @@
       position: absolute;
       top: 60%;
       right: 5%;
+      cursor: pointer;
 
       @include media(mobile) {
         right: 2%;
@@ -69,7 +70,7 @@
 
     position: absolute;
     top: 110%;
-    z-index: 1;
+    z-index: 3;
     display: flex;
     flex-direction: column;
     align-items: center;
